--- a/package.json
+++ b/package.json
@@ -6,15 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve": "concurrently \"npm run dev\" \"npm run mock\"",
+    "mock": "json-server -w db.json -p 4300 -d 1750"
   },
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "dotenv": "^8.2.0",
+    "nextjs-progressbar": "0.0.5",
+    "sass": "^1.26.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
+    "concurrently": "^5.2.0",
+    "typescript": "^4.3.2"
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "singleQuote": true
   }
 }
